# cook

./: .dockerignore  .env.example  .gitignore  DEPLOY_SEALOS.md  Dockerfile  PRODUCT.md  README.md  README_HF.md  app.py  requirements.txt  start.sh
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/versions/: 20260715_0001_create_users_and_settings.py  20260715_0002_create_images_and_recipes.py  20260715_0003_create_families.py  20260716_0004_create_orders_notifications.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: auth.py  families.py  feedback.py  health.py  notifications.py  orders.py  recipes.py  uploads.py  users.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py  cooking_order.py  family.py  family_member.py  family_recipe.py  image.py  notification.py  recipe.py  recipe_step.py  user.py  user_settings.py
backend/app/schemas/: auth.py  family.py  feedback.py  image.py  notification.py  order.py  recipe.py  user.py  user_settings.py
backend/app/services/: auth_service.py  family_service.py  feedback_service.py  image_service.py  notification_service.py  order_service.py  recipe_service.py  user_service.py
backend/app/tests/: test_auth.py  test_auth_api.py  test_auth_service.py  test_database.py  test_deployment.py  test_families_api.py  test_family_recipes_api.py  test_feedback_api.py  test_health.py  test_images.py  test_notifications_api.py  test_orders_api.py  test_recipes_api.py  test_security.py  test_users.py
mobile/: .env.example  app.json  package-lock.json  (+1 more)
(+67 files in other folders)
