[project]
name = "cook-picture-backend"
version = "0.1.0"
description = "FastAPI backend for Cook Picture"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13.2",
  "bcrypt>=4.0.1,<4.1.0",
  "cryptography>=42.0.8",
  "email-validator>=2.2.0",
  "fastapi>=0.111.0",
  "passlib[bcrypt]>=1.7.4",
  "pydantic-settings>=2.3.4",
  "pydantic>=2.8.2",
  "pymysql>=1.1.1",
  "python-jose[cryptography]>=3.3.0",
  "python-multipart>=0.0.9",
  "sqlalchemy>=2.0.31",
  "uvicorn[standard]>=0.30.1"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.2.2",
  "pytest-asyncio>=0.23.7",
  "ruff>=0.5.0"
]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*"]

[tool.pytest.ini_options]
testpaths = ["app/tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
